# tauri-plugin-decorum-solidjs

./: Cargo.toml
examples/tauri-app/: bun.lockb
examples/tauri-app/src/: App.tsx
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/src/: lib.rs
src/js/: titlebar.js
